{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 56,
  "lineage": "4ac43218-5499-889e-700d-46a04fb2dc9d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0dfafc07c84d2b889",
            "domain": "vpc",
            "id": "eipalloc-010a2d98063947f9d",
            "network_interface": "eni-0d56859f5d5629f2d",
            "private_dns": "ip-10-0-146-84.ap-south-1.compute.internal",
            "private_ip": "10.0.146.84",
            "public_dns": "ec2-15-207-50-155.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.50.155",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0732b62d310b80e97",
            "arn": "arn:aws:ec2:ap-south-1:737627870383:instance/i-018b9a64b190c915f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-018b9a64b190c915f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04bde27d52afb3b1e",
            "private_dns": "ip-10-0-12-170.ap-south-1.compute.internal",
            "private_ip": "10.0.12.170",
            "public_dns": "ec2-13-127-31-6.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.31.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03ac6381df740ac60",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0c9c10053ef52bb5d",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05824c987b9216470"
            ]
          },
          "dependencies": [
            "aws_key_pair.bastion",
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0732b62d310b80e97",
            "arn": "arn:aws:ec2:ap-south-1:737627870383:instance/i-0f13c21af83ed6d8a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f13c21af83ed6d8a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bec83b210cad1e30",
            "private_dns": "ip-10-0-38-210.ap-south-1.compute.internal",
            "private_ip": "10.0.38.210",
            "public_dns": "ec2-13-127-68-160.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.68.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ef52aa3e9c76b371",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0fffc382f1876643a",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05824c987b9216470"
            ]
          },
          "dependencies": [
            "aws_key_pair.bastion",
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:737627870383:internet-gateway/igw-0a23ed8826e46dab4",
            "id": "igw-0a23ed8826e46dab4",
            "owner_id": "737627870383",
            "tags": {
              "Name": "igw"
            },
            "vpc_id": "vpc-01f468ce514578a5d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-010a2d98063947f9d",
            "id": "nat-07ffd43c703b02903",
            "network_interface_id": "eni-0d56859f5d5629f2d",
            "private_ip": "10.0.146.84",
            "public_ip": "15.207.50.155",
            "subnet_id": "subnet-05ce2d0c827fe7b97",
            "tags": {
              "Name": "nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d69e495523c245871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-07ffd43c703b02903",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d69e495523c24587",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a23ed8826e46dab4",
            "id": "r-rtb-01b19367482ff5ab51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01b19367482ff5ab5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d69e495523c24587",
            "owner_id": "737627870383",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-07ffd43c703b02903",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-01f468ce514578a5d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01b19367482ff5ab5",
            "owner_id": "737627870383",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a23ed8826e46dab4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-01f468ce514578a5d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034ee3a9c248f1732",
            "route_table_id": "rtb-0d69e495523c24587",
            "subnet_id": "subnet-05ce2d0c827fe7b97"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5eb3693387717f7",
            "route_table_id": "rtb-0d69e495523c24587",
            "subnet_id": "subnet-001ffeba8084d61e9"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cf716d0f0c9b06d",
            "route_table_id": "rtb-01b19367482ff5ab5",
            "subnet_id": "subnet-0c9c10053ef52bb5d"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012d8571e173a20cf",
            "route_table_id": "rtb-01b19367482ff5ab5",
            "subnet_id": "subnet-0fffc382f1876643a"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:737627870383:security-group/sg-05824c987b9216470",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05824c987b9216470",
            "ingress": [],
            "name": "demo-bastion",
            "name_prefix": null,
            "owner_id": "737627870383",
            "revoke_rules_on_delete": true,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-01f468ce514578a5d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion-22",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-873096796",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05824c987b9216470",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion-443",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2559853043",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05824c987b9216470",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:737627870383:subnet/subnet-05ce2d0c827fe7b97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.128.0/19",
            "id": "subnet-05ce2d0c827fe7b97",
            "map_public_ip_on_launch": false,
            "owner_id": "737627870383",
            "tags": {
              "Name": "private-subnet-0"
            },
            "vpc_id": "vpc-01f468ce514578a5d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:737627870383:subnet/subnet-001ffeba8084d61e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.160.0/19",
            "id": "subnet-001ffeba8084d61e9",
            "map_public_ip_on_launch": false,
            "owner_id": "737627870383",
            "tags": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-01f468ce514578a5d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:737627870383:subnet/subnet-0c9c10053ef52bb5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/19",
            "id": "subnet-0c9c10053ef52bb5d",
            "map_public_ip_on_launch": true,
            "owner_id": "737627870383",
            "tags": {
              "Name": "public-subnet-0"
            },
            "vpc_id": "vpc-01f468ce514578a5d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:737627870383:subnet/subnet-0fffc382f1876643a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-0fffc382f1876643a",
            "map_public_ip_on_launch": true,
            "owner_id": "737627870383",
            "tags": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-01f468ce514578a5d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:737627870383:vpc/vpc-01f468ce514578a5d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b187dab431a33020",
            "default_route_table_id": "rtb-0774966cdd21faca5",
            "default_security_group_id": "sg-0cdb6efcb9df33c29",
            "dhcp_options_id": "dopt-ce35f3a5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01f468ce514578a5d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0774966cdd21faca5",
            "owner_id": "737627870383",
            "tags": {
              "Name": "datacenter"
            }
          }
        }
      ]
    }
  ]
}